--- a/Android/capabilityUtiilizer/app/src/main/AndroidManifest.xml
+++ b/Android/capabilityUtiilizer/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name=".App"
@@ -16,7 +19,7 @@
         android:theme="@style/Theme.Androidpg"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activities.ChatWindowActivity"
+            android:name=".ui.activities.LaunchActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Androidpg"
@@ -26,7 +29,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+    </activity>
     </application>
 
 </manifest>
